# script-interpreter

./: CMakeLists.txt  Lexer.cpp  Lexer.h  StringSource.h  Token.h  main.cpp  run_tests.py  settings.h
ast/: Assignable.h  Expression.h  FunctionCall.h  FunctionDefinition.h  Variable.h  VariableDeclaration.h  VariableDefinition.h  WhileStatement.h
modules/: Lexer.cpp  Lexer.h  Parser.cpp  Parser.h  SemCheck.cpp  SemCheck.h  Source.h  StdLib.cpp  StdLib.h  StringSource.cpp
stdlib/: Algorithm.h  Evaluator.h  Network.h  includes.h
structures/: Token.cpp  Token.h
structures/ast/: AST.h  ASTNode.h  ASTNodePrinter.h  BlockStatement.h  Expression.h  FunctionCall.h  FunctionDefinition.h  IfStatement.h  Literal.h  MethodCall.h  Program.h  ReturnStatement.h  Statement.h  Variable.h  VariableAssignment.h  VariableDeclaration.h  VariableDefinition.h  WhileStatement.h
structures/ir/: ContextPrototype.cpp  ContextPrototype.h  IR.h  IRAssignable.h  IRBlock.h  IRContext.cpp  IRContext.h  IRExecutable.h  IRExpression.h  IRFunction.h  IRFunctionCall.h  IRIfStatement.h  IRLiteral.h  IRObject.cpp  IRObject.h  IRProgram.cpp  IRProgram.h  IRReturnStatement.h  IRStatement.h  IRVarAssignment.h  IRVarDeclaration.h  IRVarDefinition.h  IRVariable.h  IRWhileStatement.h
tests/: editable.txt  editable_simple.txt  test_expected_digit_float.txt  test_unexpected_eof_float.txt  test_unexpected_eof_string.txt  test_valid.txt
tests/bad/: test_assignment_compatibility.txt  test_bad_main_prototype.txt  test_empty.txt  test_expected_digit_float.txt  test_function_call_arg_checking.txt  test_no_main.txt  test_recursion_limit.txt  test_semcheck_fails.txt  test_statements_not_in_function.txt  test_unexpected_eof_float.txt  test_unexpected_eof_string.txt  test_zero_division.txt
tests/good/: test_conversions.txt  test_docs_example.txt  test_not_overwriting.txt  test_overwriting.txt  test_stdlib_functions.txt  test_valid.txt
